some UBKG refactoring